各CPUクラス追加

--- a/IEX2010.vcxproj
+++ b/IEX2010.vcxproj
@@ -121,9 +121,11 @@
     <ClCompile Include="source\Item.cpp" />
     <ClCompile Include="source\ItemManager.cpp" />
     <ClCompile Include="source\Knight.cpp" />
+    <ClCompile Include="source\Knight_CPU.cpp" />
     <ClCompile Include="source\Object.cpp" />
     <ClCompile Include="source\Particle.cpp" />
     <ClCompile Include="source\Princess.cpp" />
+    <ClCompile Include="source\Princess_CPU.cpp" />
     <ClCompile Include="source\Random.cpp" />
     <ClCompile Include="source\sceneLoad.cpp" />
     <ClCompile Include="source\sceneMain.cpp" />
@@ -132,6 +134,7 @@
     <ClCompile Include="source\Screen.cpp" />
     <ClCompile Include="source\Sound.cpp" />
     <ClCompile Include="source\Squirrel.cpp" />
+    <ClCompile Include="source\Squirrel_CPU.cpp" />
     <ClCompile Include="source\system\Framework.cpp" />
     <ClCompile Include="source\system\System.cpp" />
     <ClCompile Include="source\system\WinMain.cpp" />
@@ -152,6 +155,7 @@
     <ClCompile Include="IEX\IEX_Texture.cpp" />
     <ClCompile Include="IEX\IEX_View.cpp" />
     <ClCompile Include="source\Tiger.cpp" />
+    <ClCompile Include="source\Tiger_CPU.cpp" />
     <ClCompile Include="source\UI.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -170,9 +174,11 @@
     <ClInclude Include="source\Item.h" />
     <ClInclude Include="source\ItemManager.h" />
     <ClInclude Include="source\Knight.h" />
+    <ClInclude Include="source\Knight_CPU.h" />
     <ClInclude Include="source\Object.h" />
     <ClInclude Include="source\Particle.h" />
     <ClInclude Include="source\Princess.h" />
+    <ClInclude Include="source\Princess_CPU.h" />
     <ClInclude Include="source\Random.h" />
     <ClInclude Include="source\sceneLoad.h" />
     <ClInclude Include="source\sceneResult.h" />
@@ -180,12 +186,14 @@
     <ClInclude Include="source\Screen.h" />
     <ClInclude Include="source\Sound.h" />
     <ClInclude Include="source\Squirrel.h" />
+    <ClInclude Include="source\Squirrel_CPU.h" />
     <ClInclude Include="source\system\Framework.h" />
     <ClInclude Include="source\system\Scene.h" />
     <ClInclude Include="source\sceneMain.h" />
     <ClInclude Include="source\system\System.h" />
     <ClInclude Include="IEX\iextreme.h" />
     <ClInclude Include="source\Tiger.h" />
+    <ClInclude Include="source\Tiger_CPU.h" />
     <ClInclude Include="source\UI.h" />
   </ItemGroup>
   <ItemGroup>
