--- a/IEX2010.vcxproj
+++ b/IEX2010.vcxproj
@@ -117,6 +117,7 @@
     <ClCompile Include="source\CoinManager.cpp" />
     <ClCompile Include="source\Collision.cpp" />
     <ClCompile Include="source\Effect.cpp" />
+    <ClCompile Include="source\EventManager.cpp" />
     <ClCompile Include="source\GameManager.cpp" />
     <ClCompile Include="source\GlobalFunction.cpp" />
     <ClCompile Include="source\Item.cpp" />
@@ -169,6 +170,7 @@
     <ClInclude Include="source\CoinManager.h" />
     <ClInclude Include="source\Collision.h" />
     <ClInclude Include="source\Effect.h" />
+    <ClInclude Include="source\EventManager.h" />
     <ClInclude Include="source\GameManager.h" />
     <ClInclude Include="source\GlobalFunction.h" />
     <ClInclude Include="source\Item.h" />
