--- a/IEX2010.vcxproj.filters
+++ b/IEX2010.vcxproj.filters
@@ -124,6 +124,9 @@
     <Filter Include="ソース ファイル\EventManager">
       <UniqueIdentifier>{b3b0d18b-79b1-4ba7-9e23-b152e0b6ef51}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\TextLoader">
+      <UniqueIdentifier>{de03cd3a-a7c0-4add-b2fd-7771cd946f2f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\system\Framework.cpp">
@@ -279,6 +282,9 @@
     <ClCompile Include="source\EventManager.cpp">
       <Filter>ソース ファイル\EventManager</Filter>
     </ClCompile>
+    <ClCompile Include="source\textLoader.cpp">
+      <Filter>ソース ファイル\TextLoader</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\system\Framework.h">
@@ -388,6 +394,9 @@
     </ClInclude>
     <ClInclude Include="source\EventManager.h">
       <Filter>ソース ファイル\EventManager</Filter>
+    </ClInclude>
+    <ClInclude Include="source\textLoader.h">
+      <Filter>ソース ファイル\TextLoader</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
