--- a/IEX2010.vcxproj.filters
+++ b/IEX2010.vcxproj.filters
@@ -127,6 +127,9 @@
     <Filter Include="ソース ファイル\TextLoader">
       <UniqueIdentifier>{de03cd3a-a7c0-4add-b2fd-7771cd946f2f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Scene\sceneMenu">
+      <UniqueIdentifier>{6ceac51d-2266-4cc7-af1b-738f2d2e6708}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\system\Framework.cpp">
@@ -285,6 +288,9 @@
     <ClCompile Include="source\textLoader.cpp">
       <Filter>ソース ファイル\TextLoader</Filter>
     </ClCompile>
+    <ClCompile Include="source\sceneMenu.cpp">
+      <Filter>ソース ファイル\Scene\sceneMenu</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\system\Framework.h">
@@ -397,6 +403,9 @@
     </ClInclude>
     <ClInclude Include="source\textLoader.h">
       <Filter>ソース ファイル\TextLoader</Filter>
+    </ClInclude>
+    <ClInclude Include="source\sceneMenu.h">
+      <Filter>ソース ファイル\Scene\sceneMenu</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
