--- a/IEX2010.vcxproj
+++ b/IEX2010.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="source\sceneResult.cpp" />
     <ClCompile Include="source\sceneTitle.cpp" />
     <ClCompile Include="source\Screen.cpp" />
+    <ClCompile Include="source\Script.cpp" />
     <ClCompile Include="source\Sound.cpp" />
     <ClCompile Include="source\Squirrel.cpp" />
     <ClCompile Include="source\Squirrel_CPU.cpp" />
@@ -189,6 +190,7 @@
     <ClInclude Include="source\sceneResult.h" />
     <ClInclude Include="source\sceneTitle.h" />
     <ClInclude Include="source\Screen.h" />
+    <ClInclude Include="source\Script.h" />
     <ClInclude Include="source\Sound.h" />
     <ClInclude Include="source\Squirrel.h" />
     <ClInclude Include="source\Squirrel_CPU.h" />
