バレット全体的に改造　怪盗途中まで BaseChar,CharManager,sceneMenu,リス一部変更

--- a/IEX2010.vcxproj
+++ b/IEX2010.vcxproj
@@ -109,7 +109,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="source\BaseChara.cpp" />
-    <ClCompile Include="source\Bullet.cpp" />
+    <ClCompile Include="source\BaseBullet.cpp" />
+    <ClCompile Include="source\Squirrel_Bullet01.cpp" />
+    <ClCompile Include="source\Thief_Bullet01.cpp" />
     <ClCompile Include="source\BulletManager.cpp" />
     <ClCompile Include="source\Camera.cpp" />
     <ClCompile Include="source\CharacterManager.cpp" />
@@ -161,13 +163,17 @@
     <ClCompile Include="IEX\IEX_Texture.cpp" />
     <ClCompile Include="IEX\IEX_View.cpp" />
     <ClCompile Include="source\textLoader.cpp" />
+    <ClCompile Include="source\Thief.cpp" />
+    <ClCompile Include="source\Thief_CPU.cpp" />
     <ClCompile Include="source\Tiger.cpp" />
     <ClCompile Include="source\Tiger_CPU.cpp" />
     <ClCompile Include="source\UI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\BaseChara.h" />
-    <ClInclude Include="source\Bullet.h" />
+    <ClInclude Include="source\BaseBullet.h" />
+    <ClInclude Include="source\Squirrel_Bullet01.h" />
+    <ClInclude Include="source\Thief_Bullet01.h" />
     <ClInclude Include="source\BulletManager.h" />
     <ClInclude Include="source\Camera.h" />
     <ClInclude Include="source\CharacterManager.h" />
@@ -204,6 +210,8 @@
     <ClInclude Include="source\system\System.h" />
     <ClInclude Include="IEX\iextreme.h" />
     <ClInclude Include="source\textLoader.h" />
+    <ClInclude Include="source\Thief.h" />
+    <ClInclude Include="source\Thief_CPU.h" />
     <ClInclude Include="source\Tiger.h" />
     <ClInclude Include="source\Tiger_CPU.h" />
     <ClInclude Include="source\UI.h" />
