--- a/IEX2010.vcxproj
+++ b/IEX2010.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="IEX\IEX_View.cpp" />
     <ClCompile Include="source\textLoader.cpp" />
     <ClCompile Include="source\Thief.cpp" />
+    <ClCompile Include="source\Thief_Bullet02.cpp" />
     <ClCompile Include="source\Thief_CPU.cpp" />
     <ClCompile Include="source\Tiger.cpp" />
     <ClCompile Include="source\Tiger_CPU.cpp" />
@@ -211,6 +212,7 @@
     <ClInclude Include="IEX\iextreme.h" />
     <ClInclude Include="source\textLoader.h" />
     <ClInclude Include="source\Thief.h" />
+    <ClInclude Include="source\Thief_Bullet02.h" />
     <ClInclude Include="source\Thief_CPU.h" />
     <ClInclude Include="source\Tiger.h" />
     <ClInclude Include="source\Tiger_CPU.h" />
