--- a/IEX2010.vcxproj.filters
+++ b/IEX2010.vcxproj.filters
@@ -157,6 +157,9 @@
     <Filter Include="ソース ファイル\Bullet\Thief_Bullet02">
       <UniqueIdentifier>{7aedcfe2-da85-44df-b7e3-b4f3dabe3ae4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Wipe">
+      <UniqueIdentifier>{4bec3303-9519-46b1-af8e-9608029b5bca}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\system\Framework.cpp">
@@ -342,6 +345,9 @@
     <ClCompile Include="source\Thief_Bullet02.cpp">
       <Filter>ソース ファイル\Bullet\Thief_Bullet02</Filter>
     </ClCompile>
+    <ClCompile Include="source\Wipe.cpp">
+      <Filter>ソース ファイル\Wipe</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\system\Framework.h">
@@ -481,6 +487,9 @@
     </ClInclude>
     <ClInclude Include="source\Thief_Bullet02.h">
       <Filter>ソース ファイル\Bullet\Thief_Bullet02</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Wipe.h">
+      <Filter>ソース ファイル\Wipe</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
