--- a/IEX2010.vcxproj.filters
+++ b/IEX2010.vcxproj.filters
@@ -160,6 +160,9 @@
     <Filter Include="ソース ファイル\Wipe">
       <UniqueIdentifier>{4bec3303-9519-46b1-af8e-9608029b5bca}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Physics">
+      <UniqueIdentifier>{51e0dfbe-f700-4457-82af-f67b81cfb94d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\system\Framework.cpp">
@@ -348,6 +351,9 @@
     <ClCompile Include="source\Wipe.cpp">
       <Filter>ソース ファイル\Wipe</Filter>
     </ClCompile>
+    <ClCompile Include="source\Physics.cpp">
+      <Filter>ソース ファイル\Physics</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\system\Framework.h">
@@ -490,6 +496,9 @@
     </ClInclude>
     <ClInclude Include="source\Wipe.h">
       <Filter>ソース ファイル\Wipe</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Physics.h">
+      <Filter>ソース ファイル\Physics</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
