BaseBullet・ThiefBullet類追加・変更、BaseCharに関数追加,仮素材追加

--- a/IEX2010.vcxproj
+++ b/IEX2010.vcxproj
@@ -165,6 +165,8 @@
     <ClCompile Include="source\textLoader.cpp" />
     <ClCompile Include="source\Thief.cpp" />
     <ClCompile Include="source\Thief_Bullet02.cpp" />
+    <ClCompile Include="source\Thief_Bullet03.cpp" />
+    <ClCompile Include="source\Thief_Bullet04.cpp" />
     <ClCompile Include="source\Thief_CPU.cpp" />
     <ClCompile Include="source\Tiger.cpp" />
     <ClCompile Include="source\Tiger_CPU.cpp" />
@@ -174,6 +176,7 @@
     <ClInclude Include="source\BaseChara.h" />
     <ClInclude Include="source\BaseBullet.h" />
     <ClInclude Include="source\Squirrel_Bullet01.h" />
+    <ClInclude Include="source\Thief_Bullet04.h" />
     <ClInclude Include="source\Thief_Bullet01.h" />
     <ClInclude Include="source\BulletManager.h" />
     <ClInclude Include="source\Camera.h" />
@@ -213,6 +216,7 @@
     <ClInclude Include="source\textLoader.h" />
     <ClInclude Include="source\Thief.h" />
     <ClInclude Include="source\Thief_Bullet02.h" />
+    <ClInclude Include="source\Thief_Bullet03.h" />
     <ClInclude Include="source\Thief_CPU.h" />
     <ClInclude Include="source\Tiger.h" />
     <ClInclude Include="source\Tiger_CPU.h" />
