--- a/IEX2010.vcxproj.filters
+++ b/IEX2010.vcxproj.filters
@@ -157,6 +157,12 @@
     <Filter Include="ソース ファイル\Bullet\Thief_Bullet02">
       <UniqueIdentifier>{7aedcfe2-da85-44df-b7e3-b4f3dabe3ae4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Bullet\Thief_Bullet03">
+      <UniqueIdentifier>{94937493-1ea3-4327-9e05-eca8654214b0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Bullet\Thief_Bullet04">
+      <UniqueIdentifier>{60967d9d-6360-4e74-a969-e5b55b4cb019}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\system\Framework.cpp">
@@ -342,6 +348,12 @@
     <ClCompile Include="source\Thief_Bullet02.cpp">
       <Filter>ソース ファイル\Bullet\Thief_Bullet02</Filter>
     </ClCompile>
+    <ClCompile Include="source\Thief_Bullet03.cpp">
+      <Filter>ソース ファイル\Bullet\Thief_Bullet03</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Thief_Bullet04.cpp">
+      <Filter>ソース ファイル\Bullet\Thief_Bullet04</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\system\Framework.h">
@@ -481,6 +493,12 @@
     </ClInclude>
     <ClInclude Include="source\Thief_Bullet02.h">
       <Filter>ソース ファイル\Bullet\Thief_Bullet02</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Thief_Bullet03.h">
+      <Filter>ソース ファイル\Bullet\Thief_Bullet03</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Thief_Bullet04.h">
+      <Filter>ソース ファイル\Bullet\Thief_Bullet04</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
