--- a/IEX2010.vcxproj
+++ b/IEX2010.vcxproj
@@ -111,6 +111,7 @@
     <ClCompile Include="source\BaseChara.cpp" />
     <ClCompile Include="source\BaseBullet.cpp" />
     <ClCompile Include="source\Squirrel_Bullet01.cpp" />
+    <ClCompile Include="source\StageManager.cpp" />
     <ClCompile Include="source\Thief_Bullet01.cpp" />
     <ClCompile Include="source\BulletManager.cpp" />
     <ClCompile Include="source\Camera.cpp" />
@@ -171,11 +172,13 @@
     <ClCompile Include="source\Tiger.cpp" />
     <ClCompile Include="source\Tiger_CPU.cpp" />
     <ClCompile Include="source\UI.cpp" />
+    <ClCompile Include="source\Wipe.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\BaseChara.h" />
     <ClInclude Include="source\BaseBullet.h" />
     <ClInclude Include="source\Squirrel_Bullet01.h" />
+    <ClInclude Include="source\StageManager.h" />
     <ClInclude Include="source\Thief_Bullet04.h" />
     <ClInclude Include="source\Thief_Bullet01.h" />
     <ClInclude Include="source\BulletManager.h" />
@@ -221,6 +224,7 @@
     <ClInclude Include="source\Tiger.h" />
     <ClInclude Include="source\Tiger_CPU.h" />
     <ClInclude Include="source\UI.h" />
+    <ClInclude Include="source\Wipe.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="DATA\Shader\2D.fx" />
