--- a/IEX2010.vcxproj.filters
+++ b/IEX2010.vcxproj.filters
@@ -12,10 +12,6 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
-    <Filter Include="リソース ファイル">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
-    </Filter>
     <Filter Include="シェーダー">
       <UniqueIdentifier>{5fc7559b-c141-4ecd-b664-927ab910afda}</UniqueIdentifier>
     </Filter>
@@ -162,6 +158,16 @@
     </Filter>
     <Filter Include="ソース ファイル\Bullet\Thief_Bullet04">
       <UniqueIdentifier>{60967d9d-6360-4e74-a969-e5b55b4cb019}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Bullet\Thief_Bullet02">
+      <UniqueIdentifier>{1e7b2f38-3bdb-4571-a0b7-7ca1d0300c55}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Wipe">
+      <UniqueIdentifier>{39ede1e2-747a-4fd5-b0d8-676305a443ce}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="リソース ファイル">
+      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
+      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -345,14 +351,20 @@
     <ClCompile Include="source\Squirrel_Bullet01.cpp">
       <Filter>ソース ファイル\Bullet\Squirrel_Bullet01</Filter>
     </ClCompile>
-    <ClCompile Include="source\StageManager.cpp">
-      <Filter>ソース ファイル\StageManager</Filter>
-    </ClCompile>
     <ClCompile Include="source\Thief_Bullet03.cpp">
       <Filter>ソース ファイル\Bullet\Thief_Bullet03</Filter>
     </ClCompile>
     <ClCompile Include="source\Thief_Bullet04.cpp">
       <Filter>ソース ファイル\Bullet\Thief_Bullet04</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Thief_Bullet02.cpp">
+      <Filter>ソース ファイル\Bullet\Thief_Bullet02</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Wipe.cpp">
+      <Filter>ソース ファイル\Wipe</Filter>
+    </ClCompile>
+    <ClCompile Include="source\StageManager.cpp">
+      <Filter>ソース ファイル\StageManager</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -491,14 +503,20 @@
     <ClInclude Include="source\Squirrel_Bullet01.h">
       <Filter>ソース ファイル\Bullet\Squirrel_Bullet01</Filter>
     </ClInclude>
-    <ClInclude Include="source\StageManager.h">
-      <Filter>ソース ファイル\StageManager</Filter>
-    </ClInclude>
     <ClInclude Include="source\Thief_Bullet03.h">
       <Filter>ソース ファイル\Bullet\Thief_Bullet03</Filter>
     </ClInclude>
     <ClInclude Include="source\Thief_Bullet04.h">
       <Filter>ソース ファイル\Bullet\Thief_Bullet04</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Thief_Bullet02.h">
+      <Filter>ソース ファイル\Bullet\Thief_Bullet02</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Wipe.h">
+      <Filter>ソース ファイル\Wipe</Filter>
+    </ClInclude>
+    <ClInclude Include="source\StageManager.h">
+      <Filter>ソース ファイル\StageManager</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
