--- a/IEX2010.vcxproj
+++ b/IEX2010.vcxproj
@@ -114,6 +114,7 @@
     <ClCompile Include="source\Pirate.cpp" />
     <ClCompile Include="source\Pirate_Bullet01.cpp" />
     <ClCompile Include="source\Pirate_Bullet02.cpp" />
+    <ClCompile Include="source\Pirate_Bullet03.cpp" />
     <ClCompile Include="source\Pirate_CPU.cpp" />
     <ClCompile Include="source\Squirrel_Bullet01.cpp" />
     <ClCompile Include="source\StageManager.cpp" />
@@ -185,6 +186,7 @@
     <ClInclude Include="source\Pirate.h" />
     <ClInclude Include="source\Pirate_Bullet01.h" />
     <ClInclude Include="source\Pirate_Bullet02.h" />
+    <ClInclude Include="source\Pirate_Bullet03.h" />
     <ClInclude Include="source\Pirate_CPU.h" />
     <ClInclude Include="source\Squirrel_Bullet01.h" />
     <ClInclude Include="source\StageManager.h" />
